--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -121,6 +121,18 @@ li {
   margin-bottom: 100px;
 }
 
+.flex {
+  display: flex;
+}
+
+.sidebar {
+  padding: 30px;
+}
+
+.comment-name {
+  font-size: 30px;
+}
+
 .pagination {
   justify-content: center;
 }
