--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -4,6 +4,7 @@
       <h2><%= @member.full_name %>さんの投稿</h2>
       <table class='table table-bordered'>
         <tbody>
+  
           <tr>
             <th class='col-2'>タイトル</th>
             <td><%= @post.title %></td>
@@ -13,17 +14,23 @@
             <th>投稿内容</th>
             <td><%= @post.content %></td>
           </tr>
+
           <tr>
-            <th>変更</th>
-            <td><%= link_to '編集する', edit_admin_post_path(@post.id),class: 'btn btn-success' %>
-            <%= link_to '削除する', admin_post_path(@post.id),method: :delete, data: {confirm: "削除しますか？"}, class: 'btn btn-danger' %></td>
+            <th>タグ</th>
+            <td><%= @post.tags.pluck(:tag_name).join(',') %></td>
           </tr>
+
           <tr>
             <th>コメント</th>
             <td><%= @post.post_comments.count %>件</td>
           </tr>
+          
         </tbody>
       </table>
+      <div class='text-right'>
+        <%= link_to '編集する', edit_admin_post_path(@post.id),class: 'btn btn-success' %>
+        <%= link_to '削除する', admin_post_path(@post.id),method: :delete, data: {confirm: "削除しますか？"}, class: 'btn btn-danger' %>
+      </div>
       <div id='comments_area'>
         <%= render 'user/post_comments/comments',post: @post %>
       </div>
