--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,15 @@
       <%= render '/layouts/header' %>
     </header>
     <main>
-      <div class="notice pl-5 "><%= notice %></div>
-      <% unless %w[root about].any? { |name| current_page?(send("#{name}_path")) } %>
-        <%= render '/user/searches/form' %>
+      <div class='notice pl-5'><%= notice %></div>
+      <% if (admin_signed_in? || member_signed_in?) %>
+        <% unless %w[root about].any? { |name| current_page?(send("#{name}_path")) } %>
+          <%= render '/user/searches/form' %>
+        <% end %>
       <% end %>
       <%= yield %>
     </main>
-    <footer class="footer">
+    <footer class='footer'>
       <%= render '/layouts/footer' %>
     </footer>
   </body>
