--- a/app/views/user/members/likes.html.erb
+++ b/app/views/user/members/likes.html.erb
@@ -1,7 +1,9 @@
 <div class='container margin'>
   <div class='row circle'>
     <div class='col'>
-      <h2>いいねした投稿</h2>
+      <% if @likes.count != 0 %>
+        <h2>いいねした投稿</h2>
+      <% end %>
       <table class='table table-striped'>
         <thead>
           <tr>
@@ -22,7 +24,7 @@
             <% end %>
           <% else %>
             <h2 class='text-center mt-5'>まだいいねした投稿がありません</h2>
-            <h3 class='text-center mt-5'>参考になった投稿などをどんどんいいねして自分の力に変えましょう</h3>
+            <h3 class='text-center my-5'>参考になった投稿などをどんどんいいねして自分の力に変えましょう</h3>
           <% end %>
         </tbody>
       </table>
