--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class='form-group'>
-          <%= f.label :tag_name, 'タグ' %>
+          <%= f.label :tag_name, 'タグ (,で区切ると複数タグ登録できます)' %>
           <%= f.text_field :tag_name,class: 'form-control' %>
         </div>
 
