--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -52,6 +52,8 @@ header {
   height: 700px;
   width: auto;
   background-size: cover;
+  background-color: rgba(0,0,0,0.5);
+  background-blend-mode: darken;
 }
 
 .fa-thumbs-up {
