--- a/app/views/user/post_comments/post_comments.js.erb
+++ b/app/views/user/post_comments/post_comments.js.erb
@@ -1,2 +1,3 @@
-$("#comments_area").html("<%= j(render 'user/post_comments/comments', post: @post, post_comment: @post_comment) %>");
+$("#comment_count").html("<%= @post.post_comments.count %>");
+$("#comments_area").html("<%= j(render 'user/post_comments/comments', post_comments: @post_comments) %>");
 $("textarea").val('');
