--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -56,6 +56,32 @@ header {
   background-blend-mode: darken;
 }
 
+h2 {
+  font-family: 'Courgette', cursive;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.th {
+  font-family: 'Courgette', cursive;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.tags {
+  width: 150px;
+	font-size: 14px;
+}
+
+.tag{
+  padding-left: 3px;
+  margin-top: 3px;
+  border: 1px solid;
+}
+
+.tag a{
+  display: block;
+}
+
+
 .fa-thumbs-up {
   color: pink;
 }
