--- a/app/views/user/posts/_tag_lists.html.erb
+++ b/app/views/user/posts/_tag_lists.html.erb
@@ -1,9 +1,9 @@
 <div class="sidebar">
   <h6>タグ一覧</h6>
-  <div>
+  <div class="tags">
     <% tag_lists.each do |list| %>
       <% if list.posts.published.count != 0 %>
-          <div>
+          <div class="tag">
             <%= link_to  tag_posts_path(tag_id: list.id) do %>
               <i class="fa-solid fa-tag"></i>&nbsp;<%= "#{list.tag_name}(#{list.posts.published.count})" %>
             <% end %>
