--- a/app/views/user/posts/search_tag.html.erb
+++ b/app/views/user/posts/search_tag.html.erb
@@ -1,7 +1,7 @@
 <div class= 'container margin'>
   <div class='row circle'>
     <div class='col-2'>
-      <%= render 'user/posts/tag_lists', tag_lists: Tag.all %>
+      <%= render 'user/posts/tag_lists', tag_lists: Tag.tag_order('desc') %>
     </div>
     <div class='col-9 offset-1'>
       <h2>タグ検索投稿一覧 <%= "( #{@tag.tag_name} ) " %></h2>
