--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -32,7 +32,7 @@
         <%= link_to '削除する', admin_post_path(@post.id),method: :delete, data: {confirm: "削除しますか？"}, class: 'btn btn-danger' %>
       </div>
       <div id='comments_area'>
-        <%= render 'user/post_comments/comments',post: @post %>
+        <%= render 'user/post_comments/comments',post_comments: @post_comments %>
       </div>
     </div>
   </div>
