--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class='container margin'>
     <div class='row circle'>
-      <div class='col-9 offset-1'>
+      <div class='col'>
         <div class='row'>
           <h2 class='col-5'>投稿一覧</h2>
           <div class='text-right col-7'>
@@ -16,8 +16,9 @@
             <tr>
               <th class='col-2'>投稿者</th>
               <th class='col-3'>タイトル</th>
-              <th class='col-2'>内容</th>
-              <th class='col-2'>いいね数</th>
+              <th class='col-4'>内容</th>
+              <th class="col-2">投稿日(最終更新日)</th>
+              <th class='col-1'>いいね</th>
             </tr>
           </thead>
           <tbody>
