--- a/app/views/user/posts/sort.html.erb
+++ b/app/views/user/posts/sort.html.erb
@@ -25,7 +25,7 @@
             <%= render 'user/posts/sort', posts: @posts %>
           </tbody>
         </table>
-        <%= paginate @posts %>
+        <!--<#%= paginate @posts %>-->
       </div>
     </div>
   </div>
