--- a/app/views/user/relationships/followers.html.erb
+++ b/app/views/user/relationships/followers.html.erb
@@ -1,12 +1,13 @@
 <div class='container margin'>
   <div class='row circle'>
     <div class='col'>
+      <h2><%= @member.nickname %>さんのフォロワー一覧</h2>
       <% if @members.exists? %>
         <table class='table'>
-          <h2>フォロワー一覧</h2>
           <thead>
             <tr>
               <th>名前</th>
+              <th>投稿数</th>
               <th></th>
             </tr>
           </thead>
@@ -14,7 +15,8 @@
             <% @members.each do |member| %>
               <tr>
                 <td><%= link_to member.full_name, member_path(member.id) %></td>
-                <td>投稿数 <%= member.posts.published.count %></td>
+                <td><%= member.posts.published.count %>件</td>
+                <td></td>
               </tr>
             <% end %>
           </tbody>
