--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -5,6 +5,6 @@
   </div>
 
   <div class='text-right'>
-    <%= link_to "注意点やお願い、本サイトの目的", about_path %><span>を読んでいただけると幸いです。</span>
+    <%= link_to "注意点やお願い、本サイトの目的", about_path,class: 'about-link' %><span>を読んでいただけると幸いです。</span>
   </div>
 </div>
