--- a/app/views/user/posts/_post_search.html.erb
+++ b/app/views/user/posts/_post_search.html.erb
@@ -1,8 +1,7 @@
 <%= form_with url: sort_path, method: :get do |f| %>
   <%= f.select :keyword, [  ['投稿が新しい順', 'new'],
                             ['投稿が古い順', 'old'],
-                            ['いいねが多い順', 'likes'],
-                            ['いいねが少ない順', 'dislikes']
+                            ['いいねが多い順', 'likes']
                           ],{},class: "custom-select col-6" %>
   <%= f.submit '並び替え',class: 'btn btn-primary col-3' %>
 <% end %>
