--- a/app/views/user/posts/confirm.html.erb
+++ b/app/views/user/posts/confirm.html.erb
@@ -11,6 +11,7 @@
               <th>ニックネーム</th>
               <th>タイトル</th>
               <th>内容</th>
+              <th>タグ</th>
               <th></th>
               <th></th>
             </tr>
@@ -18,11 +19,12 @@
           <tbody>
             <% @posts.each do |post| %>
               <tr>
-                <td><%= link_to post.member.nickname, member_path(post.member_id) %></td>
-                <td><%= link_to post.title, post_path(post.id) %></td>
-                <td><%= post.content.truncate(30) %></td>
-                <td><%= link_to '編集する', edit_post_path(post.id),class: 'btn btn-success' %></td>
-                <td><%= link_to '削除する', post_path(post.id),method: :delete, data: { confirm: "削除してもよろしいですか？" },class: 'btn btn-danger' %></td>
+                <td class='col-2'><%= link_to post.member.nickname, member_path(post.member_id) %></td>
+                <td class='col-3'><%= link_to post.title, post_path(post.id) %></td>
+                <td class='col-3'><%= post.content.truncate(30) %></td>
+                <td class='col-2'><%= post.tags.pluck(:tag_name).join(',') %></td>
+                <td class='col-1'><%= link_to '編集する', edit_post_path(post.id),class: 'btn btn-success' %></td>
+                <td class='col-1'><%= link_to '削除する', post_path(post.id),method: :delete, data: { confirm: "削除してもよろしいですか？" },class: 'btn btn-danger' %></td>
               </tr>
             <% end %>
           </tbody>
