--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -32,7 +32,7 @@
             <% end %>
           </tbody>
         </table>
-        <%= paginate @records %>
+        <div><%= paginate @records %></div>
       </div>
     </div>
   </div>
