--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -78,15 +78,41 @@ header {
 }
 
 
-.tags {
+.sidebar {
+  position: fixed;
+  top: 0px;
+  left: 0px;
   width: 150px;
-	font-size: 14px;
+  height: 100%;
+  background: #fff;
+
+  /* 縦方向のスクロールバーを表示 */
+  overflow-y: scroll;
+
+  /* IE などのスクロールバーの色設定 */
+  scrollbar-face-color: #999;
+  scrollbar-track-color: #eee;
+
+  /* スマホ用の慣性スクロール */
+  -webkit-overflow-scrolling: touch;
+}
+
+.menu::-webkit-scrollbar {
+  width: 5px;
+}
+.menu::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+}
+.menu::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .tag{
+  font-size: 14px;
   padding-left: 3px;
   margin-top: 3px;
   border: 1px solid;
+  overflow-wrap: break-word;
 }
 
 .tag a {
@@ -155,7 +181,7 @@ i {
 }
 
 .circle {
-  border-radius: 30px;
+  border-radius: 15px;
   background-color: #bcffff;
   padding: 30px;
 }
@@ -203,3 +229,4 @@ footer {
 .footer-p {
   line-height: 70px;
 }
+
