--- a/app/views/user/relationships/followings.html.erb
+++ b/app/views/user/relationships/followings.html.erb
@@ -15,7 +15,8 @@
             <% @members.each do |member| %>
               <tr>
                 <td><%= link_to member.full_name, member_path(member.id) %></td>
-                <td><%= member.posts.published.count %>件</td＞
+                <td><%= member.posts.published.count %>件</td>
+                <td></td>
               </tr>
             <% end %>
           </tbody>
