--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -2,25 +2,21 @@
   <div class='sidebar'>
     <%= render 'user/posts/tag_lists', tag_lists: Tag.tag_order('desc') %>
   </div>
-  <div class='container margin'>
-    <div class='row circle'>
-      <div class='col'>
-        <h2>メンバー一覧</h2>
-        <table class='table table-striped'>
-          <thead>
-            <tr>
-              <th class='col-5'>ニックネーム(フルネーム)</th>
-              <th class='col-2'>投稿した件数</th>
-              <th class='col-2'>フォロー</th>
-              <th class='col-2'>フォロワー</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= render 'user/members/index', members: @members %>
-          </tbody>
-        </table>
-        <div><%= paginate @members %></div>
-      </div>
-    </div>
+  <div class='container margin circle'>
+    <h2>メンバー一覧</h2>
+    <table class='table table-striped'>
+      <thead>
+        <tr>
+          <th class='col-5'>ニックネーム(フルネーム)</th>
+          <th class='col-2'>投稿した件数</th>
+          <th class='col-2'>フォロー</th>
+          <th class='col-2'>フォロワー</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render 'user/members/index', members: @members %>
+      </tbody>
+    </table>
+    <div><%= paginate @members %></div>
   </div>
 </div>
