--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -77,17 +77,15 @@ header {
   background-blend-mode: darken;
 }
 
-
 .sidebar {
-  position: fixed;
-  top: 0px;
+  position: absolute;
+  top: 100px;
   left: 0px;
   width: 150px;
-  height: 100%;
-  background: #fff;
+  height: 50%;
 
   /* 縦方向のスクロールバーを表示 */
-  overflow-y: scroll;
+  overflow: auto;
 
   /* IE などのスクロールバーの色設定 */
   scrollbar-face-color: #999;
@@ -199,7 +197,7 @@ li {
 }
 
 .margin {
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 100px;
 }
 
