--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -17,8 +17,8 @@
       </div>
 
       <div class='form-group'>
-        <%= f.label :name, "タグ (,で区切ると複数タグ登録できます)" %><br />
-        <%= f.text_field :name,placeholder: '例）rails,HTML',value: @tag_list,class:"form-control"%>
+        <%= f.label :tag_name, "タグ (,で区切ると複数タグ登録できます)" %><br />
+        <%= f.text_field :tag_name,placeholder: '例）rails,HTML',value: @tag_list,class:"form-control"%>
       </div>
 
       <div class='form-group'>
